[package]
name = "asms"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
gmt_dos-actors.workspace = true
gmt_dos-clients = { workspace = true, features = ["clients"] }
gmt_dos-clients_io.workspace = true
gmt_dos-clients_fem = { workspace = true, features = ["serde"] }
gmt_dos-clients_arrow = { workspace = true, optional = true }
gmt_dos-clients_m2-ctrl = { workspace = true, features = ["serde"] }
gmt-fem.workspace = true
anyhow.workspace = true
polars = { version = "0.27.2", features = ["parquet"], optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
env_logger.workspace = true
triangle-rs = { version = "0.1.2", optional = true }
plotters = { version = "0.3.4", optional = true }
colorous = { version = "1.0.10", optional = true }
matio-rs = { workspace = true, optional = true }
nalgebra = { workspace = true, optional = true }
num-complex = "0.4.3"
thiserror.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
bincode = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true, features = ["rayon"] }
serde-pickle = { version = "1.1.1", optional = true }
flate2 = { version = "1.0.26", optional = true }
tar = { version = "0.4.38", optional = true }

[features]
mesh = ["triangle-rs", "plotters", "colorous", "matio-rs"]
infun = ["gmt_dos-clients_arrow", "tokio"]
trfun-wn = [
    "gmt_dos-clients_arrow",
    "tokio",
    "nalgebra",
    "gmt_dos-clients/noise",
    "gmt_dos-clients/nalgebra",
]
trfun-an = [
    "nalgebra/serde-serialize",
    "serde",
    "bincode",
    "rayon",
    "indicatif",
    "serde-pickle",
    "matio-rs/nalgebra",
    "bincode",
]
archive = ["flate2", "tar"]

[[bin]]
name = "mesh"
path = "src/bin/facesheet-mesh.rs"
required-features = ["mesh"]

[[bin]]
name = "nodes"
path = "src/bin/facesheet-nodes.rs"
required-features = ["polars"]

[[bin]]
name = "infun"
path = "src/bin/influence-functions.rs"
required-features = ["infun"]

[[bin]]
name = "trfun-wn"
path = "src/bin/transfer-functions/white-noise/main.rs"
required-features = ["trfun-wn"]

[[bin]]
name = "trfun-an"
path = "src/bin/transfer-functions/analytic/main.rs"
required-features = ["trfun-an"]

[[bin]]
name = "trfun-an-modal"
path = "src/bin/transfer-functions/analytic/modal/main.rs"
required-features = ["trfun-an"]
